<resources>
    <string name="app_name">Airline</string>
    <string name="hello">Hello Class</string>
    <string name="launch_calculator">Launch Calculator</string>
    <string name="return_to_main">Return to Main</string>
    <string name="plus">+</string>
    <string name="flight_number">Flight Number</string>
    <string name="airline_name">Airline Name</string>
    <string name="add">Add</string>
    <string name="source_airport">Source Airport</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="search_for_flights">Result will display here</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="depart_date_mm_dd_yyyy_hh_mm">Depart Date (mm/dd/yyyy hh:MM)</string>
    <string name="arrival_date_mm_dd_yyyy_hh_mm">Arrival Date (mm/dd/yyyy hh:MM)</string>
</resources>