<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFlightActivity">


    <LinearLayout
        android:id="@+id/addInputs"
        android:layout_width="390dp"
        android:layout_height="305dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065">

        <EditText
            android:id="@+id/airline_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/airline_name"
            android:inputType="textPersonName"
            android:visibility="visible"
            tools:visibility="visible" />


        <EditText
            android:id="@+id/flight_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/flight_number"
            android:inputType="number"
            tools:visibility="visible" />


        <EditText
            android:id="@+id/src"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/source_airport"
            android:inputType="textCapCharacters"
            android:maxLength="3"
            />

        <EditText
            android:id="@+id/depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/depart_date_mm_dd_yyyy_hh_mm"
            android:inputType="date|text"
            />

        <EditText
            android:id="@+id/dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/destination_airport"
            android:inputType="textCapCharacters"
            android:maxLength="3"
            />

        <EditText
            android:id="@+id/arrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/arrival_date_mm_dd_yyyy_hh_mm"
            android:inputType="date|text"
            />



    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="124dp"
        android:layout_height="77dp"
        android:onClick="addAirline"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInputs"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>